--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win and vc<14]
 
 requirements:
@@ -56,3 +56,4 @@ extra:
   recipe-maintainers:
     - SylvainCorlay
     - madhur-tandon
+    - JohanMabille
