--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "xvega" %}
-{% set version = "0.0.10" %}
-{% set sha256 = "c7e50090b188baf594463cf093638318f96c9aabad9365cfdd660f5d12ef91f4" %}
+{% set version = "0.1.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,24 +7,23 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/QuantStack/xvega/archive/{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: https://github.com/jupyter-xeus/xvega/archive/{{ version }}.tar.gz
+  sha256: 750a19078693b7fcf34360745390e2df6158647b317152f2be9dd766936df74b
 
 build:
-  number: 1
+  number: 0
   skip: true  # [win and vc<14]
 
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - {{ stdlib('c') }}
     - cmake
     - make  # [unix]
   host:
     - nlohmann_json
-    - xproperty >=0.11.0,<0.12.0
-    - xtl >=0.7.0,<0.8.0
+    - xproperty >=0.12.0,<0.13.0
   run_constrained:
-    - {{ pin_compatible('xtl', max_pin='x.x') }}
     - {{ pin_compatible('xproperty', max_pin='x.x') }}
     - {{ pin_compatible('nlohmann_json', max_pin='x.x') }}
 
